fix alignament (#290)

--- a/geonode_mapstore_client/client/themes/geonode/less/_details-panel.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_details-panel.less
@@ -125,6 +125,7 @@
     font-size: 0.9em;
     .fa-edit, .fa-check-circle{
         font-size: 0.9rem;
+        margin: 0.2em 0 0 0;
     }
 }
 
@@ -135,7 +136,7 @@
         display: flex;
         word-break: break-word;
         font-size: 1rem;
-        margin: 0 0.4em 0 0;
+        margin: 0.2em 0.4em 0 0;
 
         .fa {
             margin: 0;
@@ -146,6 +147,7 @@
         display: flex;
         flex: 1;
         justify-content: flex-end;
+        align-items: center;
         button, a{
             padding: 0.1rem 0 0 0.5rem;
         }
